--- a/mobile/fiapDesafio/app/src/main/res/values/strings.xml
+++ b/mobile/fiapDesafio/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="minhas_opcoes">Minhas Opções</string>
     <string name="aberto">Aberto</string>
     <string name="fechado">Fechado</string>
+    <string name="vagas_estotadas">Vagas: Esgotado</string>
 </resources>
