--- a/mobile/fiapDesafio/app/src/main/res/values/strings.xml
+++ b/mobile/fiapDesafio/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="yes">Sim</string>
     <string name="no">Não</string>
     <string name="ok">Ok</string>
+    <string name="text_agendado" >Você está inscrito desde %s %s</string>
 </resources>
