terminado com todas validacoes e regras

--- a/mobile/fiapDesafio/app/src/main/res/values/strings.xml
+++ b/mobile/fiapDesafio/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">fiapDesafio</string>
+    <string name="app_name">Fiap Palestras</string>
     <string name="filtrar_por_categorias">Filtrar por Categorias</string>
     <string name="minhas_opcoes">Minhas Opções</string>
     <string name="aberto">Aberto</string>
